tests/ui/tool-attributes/tool-attributes-misplaced-2.stderr
error: expected derive macro, found tool attribute `rustfmt::skip`
  --> $DIR/tool-attributes-misplaced-2.rs:1:10
   |
LL | #[derive(rustfmt::skip)]
   |          ^^^^^^^^^^^^^ not a derive macro

error: expected macro, found tool attribute `rustfmt::skip`
  --> $DIR/tool-attributes-misplaced-2.rs:5:5
   |
LL |     rustfmt::skip!();
   |     ^^^^^^^^^^^^^ not a macro

error: aborting due to 2 previous errors

